--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "\"# Streamlined\"",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "frontend-install": "npm install --prefix frontend",
     "frontend": "npm start --prefix frontend",
-    "dev": "concurrently \"npm run server\" \"npm run frontend\""
+    "dev": "concurrently \"npm run server\" \"npm run frontend\"",
+    "start": "node app.js",
+    "server": "nodemon app.js",
+    "debug": "node --inspect app.js"
   },
   "repository": {
     "type": "git",
@@ -21,6 +23,17 @@
   "homepage": "https://github.com/leon-i/Streamlined#readme",
   "proxy": "http://localhost:5000",
   "dependencies": {
-    "concurrently": "^5.1.0"
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "concurrently": "^5.1.0",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.9.9",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "validator": "^13.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.3"
   }
 }
