--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,5 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+/src/config/keys.js
+
 # dependencies
 /node_modules
 /.pnp
@@ -10,7 +12,6 @@
 
 # production
 /build
-/src/config/keys
 
 # misc
 .DS_Store
