--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,5 +42,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "http://localhost:5000",
+  "engines": {
+    "node": "16.x"
+  }
 }
